fixing follow alignament

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/widget/onboarding/follow.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/widget/onboarding/follow.css
@@ -41,7 +41,7 @@
   border-bottom: 1px solid #cccccc;
   margin-top: -1px;
   position: relative;
-  width: 100px;
+  width: 100%;
 }
 .two-column-follow .two-column-right .selectable-list li input[type="checkbox"] {
   position: absolute;
